# CTM

./: CMakeLists.txt  Lexifier.cpp  Lexifier.h  Parser.cpp  Parser.h  README.md  bnf.txt  bnfExample.txt  build.sh  debug.cpp  main  main.cpp  test.txt
